--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Ubiquitel App</title>
+    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
-    <p>hello!</p>
+    <div class="">
+      
+    </div>
   </body>
 </html>
